# mplab-core-da-zed

./: .gitignore  Cargo.toml  LICENSE  README.md  extension.toml
.github/workflows/: ci.yml  release.yml
debug_adapter_schemas/: mplab.json
src/: bootstrap.rs  launch_config.rs  lib.rs  paths.rs  settings.rs  shelf.rs
src/http_cache/: cache_control.rs  conditional.rs  lock.rs  meta.rs  mod.rs
src/pack/: cache.rs  download.rs  index.rs  mod.rs  pdsc.rs
tests/fixtures/: sample-index-real.xml  sample-index-with-components.xml  sample-index.xml  sample.pdsc  shelf.json
