[package]
name = "zed-mplab-debug"
version = "0.1.0"
edition = "2021"
description = "Zed debug adapter extension for Microchip MPLAB targets (PIC/AVR/dsPIC/SAM)."
repository = "https://github.com/microchip-pic-avr-tools/zed-mplab-debug"
license = "Apache-2.0"
rust-version = "1.82"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }
roxmltree = "0.20"
zip = { version = "2", default-features = false, features = ["deflate"] }
# rust_backend uses pure-Rust miniz_oxide so the crate compiles for wasm32-wasip2.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[profile.release]
# Zed extensions are shipped as small wasm; keep them small and deterministic.
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
panic = "abort"
